--- a/donate.html
+++ b/donate.html
@@ -83,7 +83,7 @@
         <br>
         <a target="_blank" href="https://www.instagram.com/ontheground_mutualaid/">On The Ground Mutual Aid</a>
         <br>
-        <p>Thank you <a target="_blank" href="https://www.instagram.com/thethtar_thet/">Thet</a> for these links below!</p>
+        <p>Thanks to<a target="_blank" href="https://www.instagram.com/thethtar_thet/">Thet</a> for these links below!</p>
         <a target="_blank" href="https://phanfoundation.org/appeal-for-idps/">Phan Foundation - Support Karen</a>
         <br>
         <a target="_blank" href="https://www.paypal.com/donate/?cmd=_s-xclick&hosted_button_id=QAJALZFBR6BQU">Karen Women's Organization - Support Karen Affected by Airstrikes</a>
