Updated Action page with Chin Leaders' Action Toolkit

--- a/action.html
+++ b/action.html
@@ -45,11 +45,10 @@
         <h2>Petitions</h2>
         <p>Some petitions below are organized by region, but you don't have to be from any one region to sign most of these!</p>
         <p>US & Canada</p>
+        <p><a target="_blank" href="http://bit.ly/MyanmarToolkit-US">Myanmar Action Toolkit by Chin Leaders of Tomorrow</a>(Geared towards the US but also a useful resource for those residing elsewhere)</p>
         <a target="_blank" href="https://www.change.org/p/justin-trudeau-speak-up-for-the-people-of-myanmar?utm_content=cl_sharecopy_27785834_en-CA%3A2&recruiter=3323030&recruited_by_id=755d7420-0054-0130-15e2-40401fa5e37a&utm_source=share_petition&utm_medium=copylink&utm_campaign=psf_combo_share_abi&utm_term=psf_combo_share_abi">Tell the Canadian government to take action against Ari Ben-Menashe for signing deals with the military terrorists.</a>
         <br>
         <a target="_blank" href="https://actionnetwork.org/petitions/biden-take-effective-action-to-restore-democracy-in-myanmar?source=direct_link&">Tell President Biden to impose tougher, targeted sanctions. </a>
-        <br>
-        <a target="_blank" href="https://actionnetwork.org/letters/demand-your-senators-to-support-democracy-in-myanmar/">Write to your Senators.</a>
         <br>
         <a target="_blank" href="https://actionnetwork.org/petitions/myanmar-military-coup-tell-president-biden-to-impose-sanctions?link_id=0&can_id=18dcc1d4503a7a727ae425fb79c1c8e9&source=email-breaking-myanmar-military-coup-demand-us-sanctions&email_referrer=email_1061518&email_subject">Tell President Biden to restore JADE Act Sanctions on Myanmar military.</a>
 
